--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -8,49 +8,71 @@
     <style>
         body {
             margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+        main{
+            background: black;
         }
         p {
             margin-right: 40px;
         }
         h1 {
-            margin: 0px 400px;
             text-align: center;
+            color: rgb(250, 225, 1); 
+            font-size: 600%; 
+            letter-spacing: 10px;
         }
         button.redondo {
             background-color: white;
             border: 1px solid black;
             border-radius: 25px;
             padding: 0px 20px;
-            height: 32px;
+            height: 40px;
+            font-size: x-large;
         }
         div#introduction-actions {
             display: flex;
             justify-content: center;
         }
+        footer{
+            text-align: center;
+            background: url(./fondo.jpg);
+            font-size: large;
+            color:white ;
+            padding: 10px;
+        }
     </style>
 </head>
-<body>
-    <div id="header" style="border-bottom: 1px solid gray; display: flex; padding: 10px 100px; justify-content: space-between">
-        <div id="header-left">
-            <img src="logo.svg">
-        </div>
-        <div id="header-right" style="display: flex; align-items: center;">
-            <p>Nosotros</p>
-            <p>Programas</p>
-            <p>Capaciontaciones</p>
-            <p>Alianzas</p>
-            <p>Contacto</p>
-            <button class="redondo">Sumate +</button>
-        </div>
-    </div>
-    <div id="introduction" style="padding: 48px;">
-        <div id="introduction-text">
-            <h1>Somos una Fundación dedicada a mejorar la calidad de vida de las personas y su entorno, a través de la tecnología.</h1>
-        </div>
-        <div id="introduction-actions" style="margin-top: 25px;">
-            <button class="redondo">Contactanos -></button>
-            <button class="redondo" style="margin-left: 14px;">Sumate +</button>
-        </div>
-    </div>
-</body>
+    <body>
+        <header>
+            <div id="header" style="border-bottom: 1px solid gray; display: flex; justify-content: space-between; background: rgb(250, 225, 1);">
+                <div id="header-left">
+                    <img src="./logo.jpg" style="width: 80px; height: 80px; margin-left: 40px; margin-top: 7px;">
+                </div>
+                <div id="header-right" style="display: flex; align-items: center; margin-right: 40px; color: black; font-size:x-large;">
+                    <p>Ingresar</p>
+                    <p>Usuario</p>
+                    <p>Productos</p>
+                    <p>Producción</p>
+                    <p>Depósito</p>
+                    <p>Ventas</p>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div id="introduction" style="padding: 120px;">
+                <div id="introduction-text">
+                    <h1>Bienvenidos</h1>
+                </div>
+                <div id="introduction-actions" style="margin-top: 10%;">
+                    <button class="redondo">Ingresar</button>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <img src="./logo.jpg" style="width:70px; height:70px; margin-top: 10px;">
+            <p class="copyright" style="margin-top: 0">&copy Copyright - Cilton Hidráulicos - 2023</p>
+        </footer>
+    </body>
 </html>
