Se carga main, footer y header

--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -48,7 +48,7 @@
         <header>
             <div id="header" style="border-bottom: 1px solid gray; display: flex; justify-content: space-between; background: rgb(250, 225, 1);">
                 <div id="header-left">
-                    <img src="./logo.jpg" style="width: 80px; height: 80px; margin-left: 40px; margin-top: 7px;">
+                    <img src="./logo2.jpg" style="width: 80px; height: 80px; margin-left: 40px; margin-top: 7px; border-radius: 5px;">
                 </div>
                 <div id="header-right" style="display: flex; align-items: center; margin-right: 40px; color: black; font-size:x-large;">
                     <p>Ingresar</p>
@@ -71,7 +71,7 @@
             </div>
         </main>
         <footer>
-            <img src="./logo.jpg" style="width:70px; height:70px; margin-top: 10px;">
+            <img src="./logo2.jpg" style="width:70px; height:70px; margin-top: 10px; border-radius: 5px;">
             <p class="copyright" style="margin-top: 0">&copy Copyright - Cilton Hidráulicos - 2023</p>
         </footer>
     </body>
